--- a/src/RidingAnywhere-client/css/crewBoard.css
+++ b/src/RidingAnywhere-client/css/crewBoard.css
@@ -13,7 +13,7 @@
 
 .CrewBoard>.boardTopLine{
     display: flex;
-    width: 100vw;
+    width: 90vw;
     max-width: 960px;
     min-width: 460px;
     height: max-content;
@@ -76,16 +76,18 @@
     max-width: 350px;
     height: 50px;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: smaller;
     text-align: center;
     font-weight: bolder;
 }
 
 .filterTop>.boardSearchBtn{
-    width: 60px;
-    min-width: 60px;
-    height: 60px;
-    min-height: 60px;
+    width: 9vw;
+    min-width: 50px;
+    max-width: 60px;
+    height: 9vw;
+    min-height: 50px;
+    max-height: 60px;
     padding : 0;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0);
@@ -125,34 +127,31 @@
 }
 
 .filterBottom>.filterCheckBox{
-    width: 150px;
+    width: 20vw;
     max-width: 150px;
     min-width: 100px;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bolder;
     color: rgb(138, 138, 138);
     background-color: rgb(18, 18, 18);
     border: 2px solid rgb(84, 84, 84);
-    border-radius: 20px;
+    border-radius: 10px;
     box-sizing: border-box;
     cursor: pointer;
 }
 
 .filterBottom>.filterCheckBox:hover, .filterBottom>.filterInput:checked+label{
     border: 2px gold solid;
-    span{
-        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-        font-weight: bold;
-        -webkit-text-stroke-width: 0.1px;
-        -webkit-text-stroke-color: black;
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-    }
+    background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: black;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
 
 .CrewBoard{
