--- a/src/RidingAnywhere-client/css/crewBoard.css
+++ b/src/RidingAnywhere-client/css/crewBoard.css
@@ -3,19 +3,20 @@
 }
 
 .Main_CrewBoard>.CrewBoard{
-    width: 100%;
+    width: 90vw;
+    max-width: 960px;
+    min-width: 460px;
     height: max-content;
     background-color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .CrewBoard>.boardTopLine{
     display: flex;
-    width: 90vw;
-    max-width: 960px;
-    min-width: 460px;
+    width: 100%;
     height: max-content;
     justify-content: center;
     align-items: center;
@@ -154,33 +155,43 @@
     color: transparent;
 }
 
+/* 크루 게시글 리스트 라인 */
+.CrewBoard>.boardListLine{
+    width: 100%;
+    height: max-content;
+    max-height: 370px;
+    border: 2px solid orange;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+.boardListLine>.boardListHeadLine, .CrewBoardBox>.CrewBoardBoxLabel{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
 .CrewBoard{
     .boardListLine{
-        width: 80%;
-        height: 400px;
-        margin-top: 15px;
-        border: 2px solid orange;
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        overflow: scroll;
-        scrollbar-width: none;
         .boardListHeadLine,.CrewBoardBoxLabel{
-            width: 100%;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
             h2{
                 margin: 0px;
                 text-align: center;
             }
             .boardNo{
-                width: 80px;
+                width: 60px;
+                min-width: 60px;
             }
             .boardType{
                 width: 120px;
+                min-width: 120px;
             }
             .boardTitle{
                 width: 380px;
