--- a/src/RidingAnywhere-client/css/crewBoardWrite.css
+++ b/src/RidingAnywhere-client/css/crewBoardWrite.css
@@ -54,6 +54,155 @@
     gap: 10px;
 }
 
+.WriteBody>.OkayBtnLine_Slim{
+
+    display: none;
+}
+
+/* 게시글 제목과 내용 입력 영역*/
+.WriteBody>.BoardWriteBox{
+    width: 100%;
+    max-width: 570px;
+    min-width: 440px;
+    height: 400px;
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    box-sizing: border-box;
+}
+
+/* 크루 게시글 제목 입력 라인 */
+.BoardWriteBox>.WriteTitle{
+    width: 100%;
+    height: 50px;
+    min-height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 10px;
+    border: 2px solid orange;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+/* 크루 게시글 내용 입력 라인 */
+.BoardWriteBox>.WriteContext{
+    width: 100%;
+    height: 330px;
+    min-height: 330px;
+    border-radius: 10px;
+    border: 2px solid orange;
+    resize: none;
+    .ql-toolbar{
+        border: none;
+        border-bottom: 3px solid orange;
+        height: 20%;
+        display: flex;
+        align-items: center;
+    }
+    .ql-container{
+        border: none;
+        height: 80%;
+        h1,h2,h3,h4{
+            color: white;
+        }
+    }
+}
+
+/* 크루 게시글 옵션 영역 */
+.WriteBody>.WriteOptionBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 300px;
+    height: max-content;
+    #emergencyNoteBtn:checked + label, #DateEqualBtn:checked~div .TimeLine>label{
+        border: 4px solid gold;
+        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+        font-weight: bold;
+        -webkit-text-stroke-width: 0.1px;
+        -webkit-text-stroke-color: black;
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+    }
+    #Free, #Greetings{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.WriteOptionBox>.Option{
+    width: 300px;
+    height: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .TimeLine{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 60px;
+        gap: 10px;
+    }
+    h2{
+        display: flex;
+        align-items: center;
+        margin: 0;
+        height: 60px;
+    }
+    .CountMemberLine{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        width: 100%;
+        .TourOptionInput{
+            width: 60px;
+            height: 40px;
+            border-radius: 20px;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bolder;
+        }
+    }
+    .TourAddress{
+        width: 90%;
+        height: 40px;
+        border: 2px solid orange;
+        border-radius: 10px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: bolder;
+    }
+    .EmergencyNoteLabel, .NoteDateEqualLabel, .TourDateEqualLabel{
+        width: 140px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bolder;
+        font-size: 25px;
+        color: rgb(138, 138, 138);
+        background-color: rgb(18, 18, 18);
+        border: 4px solid rgb(84, 84, 84);
+        border-radius: 10px;
+        cursor: pointer;
+    }
+}
+
+.WriteOptionBox>.OkayBtnLine_Wide{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
 .CrewBoardWrite{
     h2{
         background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
@@ -64,166 +213,7 @@
         background-clip: text;
         color: transparent;
     }
-    
-    .WriteBody{
-        .BoardWriteBox{
-            width: 650px;
-            height: 400px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            gap: 20px;
-            .WriteTitle{
-                width: 550px;
-                height: 50px;
-                font-size: 20px;
-                font-weight: bold;
-                padding-left: 10px;
-                border: 2px solid orange;
-                border-radius: 10px;
-                box-sizing: border-box;
-            }
-            .WriteContext{
-                width: 550px;
-                height: 330px;
-                border-radius: 10px;
-                border: 3px solid orange;
-                resize: none;
-                .ql-toolbar{
-                    border: none;
-                    border-bottom: 3px solid orange;
-                    height: 20%;
-                    display: flex;
-                    align-items: center;
 
-                }
-                .ql-container{
-                    border: none;
-                    height: 80%;
-                    h1,h2,h3,h4{
-                        color: white;
-                    }
-                }
-            }
-        }
-        .WriteOptionBox{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 300px;
-            height: 400px;
-            #emergencyNoteBtn:checked + label, #DateEqualBtn:checked~div .TimeLine>label{
-                border: 4px solid gold;
-                background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-                font-weight: bold;
-                -webkit-text-stroke-width: 0.1px;
-                -webkit-text-stroke-color: black;
-                -webkit-background-clip: text;
-                background-clip: text;
-                color: transparent;
-            }
-            .Option{
-                width: 300px;
-                height: 320px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                .TimeLine{
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    width: 100%;
-                    height: 60px;
-                    gap: 10px;
-                }
-                h2{
-                    display: flex;
-                    align-items: center;
-                    margin: 0;
-                    height: 60px;
-                }
-                .CountMemberLine{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 20px;
-                    width: 100%;
-                    .TourOptionInput{
-                        width: 60px;
-                        height: 40px;
-                        border-radius: 20px;
-                        text-align: center;
-                        font-size: 18px;
-                        font-weight: bolder;
-                    }
-                }
-                .TourAddress{
-                    width: 90%;
-                    height: 40px;
-                    border: 2px solid orange;
-                    border-radius: 10px;
-                    text-align: center;
-                    font-size: 16px;
-                    font-weight: bolder;
-                }
-                .EmergencyNoteLabel, .NoteDateEqualLabel, .TourDateEqualLabel{
-                    width: 140px;
-                    height: 40px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    font-weight: bolder;
-                    font-size: 25px;
-                    color: rgb(138, 138, 138);
-                    background-color: rgb(18, 18, 18);
-                    border: 4px solid rgb(84, 84, 84);
-                    border-radius: 10px;
-                    cursor: pointer;
-                }
-            }
-
-            #Free, #Greetings{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .OkayBtnLine{
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                gap: 20px;
-                label{
-                    width: 100px;
-                    height: 60px;
-                    border: 4px solid gray;
-                    border-radius: 20px;
-                    display: flex;
-                    text-align: center;
-                    align-items: center;
-                    justify-content: center;
-                    cursor: pointer;
-                    h2{
-                        color : gray;
-                        margin: 0;
-                    }
-                }
-                label:hover{
-                    border: 4px solid gold;
-                    h2{
-                        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-                        font-weight: bold;
-                        -webkit-text-stroke-width: 0.1px;
-                        -webkit-text-stroke-color: black;
-                        -webkit-background-clip: text;
-                        background-clip: text;
-                        color: transparent;
-                    }
-                }
-            }
-        }
-    }
     .WriteBottom{
         /* 공지글 관련 CSS */
         .NoteOption{
@@ -251,10 +241,51 @@
     }
 }
 
+.WriteBody>.OkayBtnLine_Slim,.WriteOptionBox>.OkayBtnLine_Wide{
+    label{
+        width: 100px;
+        height: 60px;
+        border: 4px solid gray;
+        border-radius: 20px;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        h2{
+            color : gray;
+            margin: 0;
+        }
+    }
+    label:hover{
+        border: 4px solid gold;
+        h2{
+            background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+            font-weight: bold;
+            -webkit-text-stroke-width: 0.1px;
+            -webkit-text-stroke-color: black;
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+    }
+}
+
+
+
+
+
+
 @media(max-width:980px){
     .CrewBoardWrite>.WriteBody{
         flex-direction: column-reverse;
     }
+    .WriteBody>.OkayBtnLine_Slim{
+        display: flex;
+    }
+    .WriteOptionBox>.OkayBtnLine_Wide{
+        display: none;
+    }
 
-    
+
 }
